--- a/package.json
+++ b/package.json
@@ -1,30 +1,43 @@
 {
-  "name": "project-elahe---tunnel-manager",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "project-elaheh",
+  "version": "1.0.1",
+  "description": "Advanced Tunneling Management System",
   "scripts": {
-    "dev": "ng serve",
+    "ng": "ng",
+    "start": "ng serve --host 0.0.0.0 --disable-host-check",
     "build": "ng build",
-    "preview": "ng serve --configuration=production"
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
+  "private": true,
   "dependencies": {
-    "rxjs": "^7.8.2",
-    "@angular/compiler": "^21.1.0",
-    "@angular/core": "^21.1.0",
-    "@google/genai": "^1.39.0",
-    "@angular/common": "^21.1.0",
-    "@angular/platform-browser": "^21.1.0",
-    "@angular/forms": "^21.1.2",
+    "@angular/animations": "^19.0.0",
+    "@angular/common": "^19.0.0",
+    "@angular/compiler": "^19.0.0",
+    "@angular/core": "^19.0.0",
+    "@angular/forms": "^19.0.0",
+    "@angular/platform-browser": "^19.0.0",
+    "@angular/router": "^19.0.0",
+    "@google/genai": "^0.1.3",
+    "chart.js": "^4.4.1",
     "qrcode": "^1.5.3",
-    "@angular/build": "^21.1.0",
-    "@angular/cli": "^21.1.0",
-    "@angular/compiler-cli": "^21.1.0",
-    "tailwindcss": "latest"
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@angular-devkit/build-angular": "^19.0.0",
+    "@angular/cli": "^19.0.0",
+    "@angular/compiler-cli": "^19.0.0",
+    "@types/jasmine": "~5.1.0",
+    "@types/node": "^18.18.0",
+    "@types/qrcode": "^1.5.5",
+    "jasmine-core": "~5.1.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "typescript": "~5.2.2"
   }
 }
