--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "project-elaheh",
   "version": "1.0.1",
@@ -19,7 +18,7 @@
     "@angular/forms": "^19.0.0",
     "@angular/platform-browser": "^19.0.0",
     "@angular/router": "^19.0.0",
-    "@google/genai": "^0.1.0",
+    "@google/genai": "*",
     "chart.js": "^4.4.1",
     "qrcode": "^1.5.3",
     "rxjs": "~7.8.0",
